# goit-ds-hw-03

./: Hw1.ipynb  authors.json  import_data.py  mongodb.py  pyproject.toml  scrapping.py
